# md2pdf

./: .gitignore  MANIFEST.in  README.md  gen_pdf.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-14-relative-images.md
docs/superpowers/specs/: 2026-07-14-relative-images-design.md
packaging/homebrew/: md2pdf.rb
src/md2pdf/: __init__.py  build_pdf.py  style.css
tests/: test_build_pdf.py  test_gen_pdf_shell.py
tests/fixtures/relative_image/: document.md
